--- a/src/components/UserTable.css
+++ b/src/components/UserTable.css
@@ -9,12 +9,19 @@ table {
     text-align: left;
     padding: 0.75rem;
     border-bottom: 1px solid #dee2e6;
+    font-size: smaller;
   }
   
   th {
+    justify-content: center;
     background-color: #343a40;
     color: #fff;
     vertical-align: middle;
+    
+  }
+  .title{
+    display: flex;
+    justify-content: center !important; 
   }
   
   tbody tr:hover {
